--- a/style.css
+++ b/style.css
@@ -5,9 +5,9 @@
 }
 
 :root {
-    --dark-color: #242424;
+    --bg-color: #d8c894;
     --light-color: #ffffff;
-    --natural-color: rgb(136, 106, 15);
+    --gold-color: rgb(136, 106, 15);
 }
 
 html {
@@ -15,16 +15,18 @@ html {
 }
 
 img {
-    width: 100%;
-    height: 100%;
+    max-width: 100%;
+    max-height: 70vh;
     object-fit: contain;
 }
 
 button {
     padding: 0.5rem 1rem;
-    background: var(--natural-color);
+    background: var(--gold-color);
     border-radius: 5px;
     border: none;
+    color: black;
+    box-shadow: 2px 4px 4px hsl(0deg 0% 0% / 0.35);
 }
 
 button:hover {
@@ -33,7 +35,8 @@ button:hover {
 
 body {
     min-height: 100vh;
-    background: var(--dark-color);
+    padding: 2rem;
+    background: var(--bg-color);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -42,9 +45,13 @@ body {
 }
 
 .frame {
-    border: 5px solid var(--natural-color);
-    width: 30rem;
-    height: 20rem;
-    color: #ffffff;
+    display: flex;
+    justify-content: center;
+    border: 10px solid var(--gold-color);
+    border-radius: 2px;
+    max-width: 70vw;
+    min-width: 10rem;
+    min-height: 10rem;
     background: #000000;
+    box-shadow: 3px 6px 6px hsl(0deg 0% 0% / 0.35);
 }
