--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@
 }
 
 :root {
-    --bg-color: #d8c894;
+    --bg-color: #d2bf87;
+    --spotlight-color: #d2bf87bb;
     --light-color: #ffffff;
     --gold-color: rgb(136, 106, 15);
 }
@@ -16,7 +17,6 @@ html {
 
 img {
     max-width: 100%;
-    max-height: 70vh;
     object-fit: contain;
 }
 
@@ -26,7 +26,7 @@ button {
     border-radius: 5px;
     border: none;
     color: black;
-    box-shadow: 2px 4px 4px hsl(0deg 0% 0% / 0.35);
+    box-shadow: 2px 4px 4px hsl(0deg 0% 0% / 0.3);
 }
 
 button:hover {
@@ -36,7 +36,7 @@ button:hover {
 body {
     min-height: 100vh;
     padding: 2rem;
-    background: var(--bg-color);
+    background: radial-gradient(var(--spotlight-color), var(--bg-color));
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -49,9 +49,9 @@ body {
     justify-content: center;
     border: 10px solid var(--gold-color);
     border-radius: 2px;
-    max-width: 70vw;
+    max-width: 20rem;
     min-width: 10rem;
-    min-height: 10rem;
+    min-height: 15rem;
     background: #000000;
-    box-shadow: 3px 6px 6px hsl(0deg 0% 0% / 0.35);
+    box-shadow: 3px 6px 6px hsl(0deg 0% 0% / 0.3);
 }
