--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ img {
     max-width: 100%;
     max-height: 85vh;
     object-fit: contain;
+    display: block;
 }
 
 button {
@@ -58,7 +59,7 @@ body {
     justify-content: center;
     border: 10px solid var(--gold-color);
     border-radius: 2px;
-    max-width: 40rem;
+    max-width: 35rem;
     min-width: 15rem;
     min-height: 15rem;
     color: #ffffff;
@@ -74,11 +75,12 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 1rem 2rem;
+    padding: 1rem;
     color: #000000;
     list-style-type: none;
     box-shadow: 2px 4px 4px hsl(0deg 0% 0% / 0.3);
     text-align: center;
+    gap: 1rem;
 }
 
 @media (max-width: 400px) {
